# cx-master

./: .gitignore  README.md  install.ps1  install.sh  package-lock.json
.github/workflows/: autorelease.yml  extension.yml  native-host.yml  rust.yml
clangd-wasm/: CMakeLists.txt  build.sh  server.py  test
clangd-wasm/src/: test.cpp  wrap-io.cpp
clangd-wasm/web/: index.html  settings.js  test-em.js  test-em.wasm
extension/: .gitignore  README.md  manifest.json  package-lock.json  package.json  shell.nix  tsconfig.json  updates-firefox.json  vite.config.ts
extension/res/: popup.html
extension/src/: app.d.ts  manifest.ts  vite-env.d.ts
extension/src/accesible/: main.ts
extension/src/background/: main.ts
extension/src/content/: main.ts
extension/src/entries/accesible/: main.ts  worker.ts
extension/src/entries/accesible/handlers/: keybinds.ts  shortcuts.ts
extension/src/entries/background/: main.ts
extension/src/entries/contentScript/: main.ts
extension/src/entries/popup/: App.svelte  index.html  main.ts
extension/src/js/background/: main.ts
extension/src/js/content/: main.ts
extension/src/js/injected/: main.ts
extension/src/js/injected/handlers/: keybinds.ts  lsp.ts  options.ts  shortcuts.ts
extension/src/lib/: KeyboardModifiers.ts  Popup.svelte  Settings.ts  ShortcutInput.svelte  Utils.ts
extension/src/ui/components/: Loader.svelte  ShortcutInput.svelte  Switch.svelte
extension/src/ui/popup/: Popup.svelte  index.html  main.ts
native-host/: Cargo.toml  runner  shell.nix
native-host/lsps/: clangd.json  pyright.json
native-host/src/: main.rs
