[package]
name = "cx-lsp-clang-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrome_native_messaging = "0.3.0"
futures-util = "0.3.28"
jsonrpc = "0.14.0"
serde_json = "1.0"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["io-util", "process", "rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.20.0"
