[package]
name = "cx-lsp-controller"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrome_native_messaging = "0.3.0"
chrono = "0.4.35"
futures-util = "0.3.28"
jsonrpc = "0.14.0"
reqwest = "0.11.26"
self-replace = "1.3.7"
self_update = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["io-util", "io-std", "process", "rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.20.0"
